# -

./: README.md
s071cmake-sfml-snake-main/: CMakeLists.txt  LICENSE.md
s071cmake-sfml-snake-main/build_new/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeSFMLProject.sln  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.vcxproj  main.vcxproj.filters
s071cmake-sfml-snake-main/build_new/main.dir/Release/main.tlog/: CL.read.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
s071cmake-sfml-snake-main/build_new/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
s071cmake-sfml-snake-main/build_new/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
s071cmake-sfml-snake-main/src/: main.cpp
